pkg/lang/testdata/ub/config/invalid/configurations-var-reference.ub
factory: {
  configurations: { aws.default: { region: var.region } }
}
